--- a/music-collection/src/main/resources/templates/showElements.html
+++ b/music-collection/src/main/resources/templates/showElements.html
@@ -9,18 +9,21 @@
 
   <body>
   
-    <p>Welcome to our grocery store!</p>
+    <p th:text="${message}"></p>
     
     <ul>
         <div th:each="elem : ${elements}">    
             <li>
                 <p th:text="${elem.name}"></p>
+                <p th:text="${elem.id}"></p>
+                <form action="/style/delete" method="post">
+                    <input type="hidden" id="id" name="id" th:attr="value=${elem.id}">
+                    <input type="submit" value="Eliminar">
+                </form>
             </li>    
         </div>
     </ul>
     
-    <p>Welcome to our grocery store!</p>
-  
   </body>
 
 </html>
