- Se modificaron los archivos para hacer uso del servicio

--- a/music-collection/src/main/resources/templates/showElements.html
+++ b/music-collection/src/main/resources/templates/showElements.html
@@ -15,8 +15,7 @@
         <div th:each="elem : ${elements}">    
             <li>
                 <p th:text="${elem.name}"></p>
-                <p th:text="${elem.id}"></p>
-                <form action="/style/delete" method="post">
+                <form th:attr="action=${action}" method="post">
                     <input type="hidden" id="id" name="id" th:attr="value=${elem.id}">
                     <input type="submit" value="Eliminar">
                 </form>
