- Se puede agregar People

--- a/music-collection/src/main/resources/templates/newPeople.html
+++ b/music-collection/src/main/resources/templates/newPeople.html
@@ -11,7 +11,7 @@
   
     <p>Welcome to our grocery store!</p>
     
-    <form action="/style/add" method="post">
+    <form action="/people/add" method="post">
       <fieldset>
         <input type="text" name="name" />
         <input type="number" name="year" />
