-Se muestra la lista de estilos al momento de crear un nuevo artista

--- a/music-collection/src/main/resources/templates/newArtist.html
+++ b/music-collection/src/main/resources/templates/newArtist.html
@@ -18,6 +18,11 @@
                 <option th:attr="value=${member.id}"th:text="${member.name}"></option>
             </div>
         </select>
+        <select multiple th:if="${not #lists.isEmpty(styles)}">
+            <div th:each="style : ${styles}">
+                <option th:attr="value=${style.id}"th:text="${style.name}"></option>
+            </div>
+        </select>
         <input type="submit" value="¡Suscríbe!"/>
       </fieldset>
     </form>
