--- a/music-collection/src/main/resources/templates/showElements.html
+++ b/music-collection/src/main/resources/templates/showElements.html
@@ -3,26 +3,59 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
   <head>
-    <title>Good Thymes Virtual Grocery</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+      <meta charset="utf-8"></meta>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+      <meta name="description" content=""></meta>
+      <meta name="author" content=""></meta>
+      <link rel="shortcut icon" type="image/png" th:href="@{/images/music.png}"></link>
+
+      <title>Music Collection</title>
+
+      <link th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.css}" rel="stylesheet"></link>
+      <link th:href="@{/css/starter.css}" rel="stylesheet"></link>
+      <link th:href="@{/css/style.css}" rel="stylesheet"></link>
   </head>
 
   <body>
   
     <p th:text="${message}"></p>
     
-    <ul>
-        <div th:each="elem : ${elements}">    
-            <li>
-                <p th:text="${elem.name}"></p>
-                <p th:text="${elem.years}"></p>
-                <form th:attr="action=${action}" method="post">
-                    <input type="hidden" id="id" name="id" th:attr="value=${elem.id}">
-                    <input type="submit" value="Eliminar">
-                </form>
-            </li>    
+    <div th:fragment="navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Music Collection</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="/artist">Artists</a></li>
+                    <li><a href="/style">Styles</a></li>
+                    <li><a href="/people">People</a></li>
+                </ul>
+            </div>
         </div>
-    </ul>
+    </div>
+    
+    <div class="container" style="padding: 70px;">
+        <ul>
+            <div th:each="elem : ${elements}">    
+                <li>
+                    <p th:text="${elem.name}"></p>
+                    <p th:text="${elem.years}"></p>
+                    <form th:attr="action=${action}" method="post">
+                        <input type="hidden" id="id" name="id" th:attr="value=${elem.id}">
+                        <input type="submit" value="Eliminar">
+                    </form>
+                </li>    
+            </div>
+        </ul>
+    </div>
     
   </body>
 
