Agregado el estilo de Artist

--- a/music-collection/src/main/resources/templates/showArtists.html
+++ b/music-collection/src/main/resources/templates/showArtists.html
@@ -42,17 +42,24 @@
       
     <p th:text="${message}"></p>
     <div class="container" style="padding: 70px;">
-        <ul>
-            <div th:each="elem : ${elements}">
-
-                <a th:href="@{/artist/{id}/member/add(id=${elem.id})}">Añadir miembro</a>
-                <a th:href="@{/artist/{id}/style/add(id=${elem.id})}">Añadir estilo</a>
-
-                <li>
-                    <p th:text="${elem.name}"></p>
-                    <p th:text="${elem.years}"></p>
-                    <b th:if="${not #lists.isEmpty(elem.members)}">Member</b>
-
+        
+        <div class="col-md-4">
+            <h1>Artists</h1>
+        </div>
+        
+        <table class="table table-striped">
+            <tr>
+                <th>Name</th>
+                <th>Years</th>
+                <th>Members</th>
+                <th>Styles</th>
+                <th>Delete</th>
+            </tr>
+            
+                <tr th:each = "elem, iterStat: ${elements}">
+                <td th:text="${elem.name}"></td>
+                <td th:text="${elem.years}"></td>
+                <td>
                     <span th:each="member,iterStat : ${elem.members}">
                         <p th:text="${member.name}"><p/>
                         <form action="/artist/member" method="post">
@@ -61,8 +68,8 @@
                             <input type="submit" value="Eliminar miembro">
                         </form>
                     </span>
-
-                    <b th:if="${not #lists.isEmpty(elem.styles)}">Style</b>
+                </td>
+                <td>
                     <span th:each="style,iterStat : ${elem.styles}">
                         <p th:text="${style.name}"><p/>
                         <form action="/artist/style" method="post">
@@ -71,14 +78,19 @@
                             <input type="submit" value="Eliminar estilo">
                         </form>
                     </span>
-
+                </td>
+                <td>
                     <form th:attr="action=${action}" method="post">
                         <input type="hidden" id="id" name="id" th:attr="value=${elem.id}">
-                        <input type="submit" value="Eliminar">
+                        <input type="submit" value="Eliminar" class="btn btn-danger btn-xs">
                     </form>
-                </li>    
-            </div>
-        </ul>  
+                </td>
+            </tr>
+            
+        </table>
+            
+        <a href="/artist/add" class="btn btn-success">Add Artist</a>
+             
     </div>
   </body>
 
