--- a/music-collection/src/main/resources/templates/newPeople.html
+++ b/music-collection/src/main/resources/templates/newPeople.html
@@ -42,14 +42,20 @@
       
     <div class="container" style="padding: 70px;">
         <form action="/people/add" method="post">
-          <fieldset>
-            <input type="text" name="name" />
-            <input type="number" name="year" />
-            <input type="submit" value="¡Suscríbe!"/>
-          </fieldset>
+            <div class="form-group">
+                <label for="peopleName">Name</label>
+                <input type="text" name="name" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="peopleYears">Year</label>
+                <input type="number" name="year" class="form-control" />
+             </div>
+            
+            <button type="submit" class="btn btn-success">Add People</button>
+
         </form>
     </div>
-    
+         
   </body>
 
 </html>
