Se realiza la busqueda

--- a/music-collection/src/main/resources/templates/showArtists.html
+++ b/music-collection/src/main/resources/templates/showArtists.html
@@ -36,6 +36,13 @@
                       <li><a href="/style">Styles</a></li>
                       <li><a href="/people">People</a></li>
                   </ul>
+                  <form action="/artist/search" class="navbar-form navbar-left">
+                      <div class="form-group">
+                          <input type="text" name="styleName" class="form-control" placeholder="Search by style">
+                      </div>
+                      <button type="submit" class="btn btn-default">Search</button>
+                  </form>
+                  
               </div>
           </div>
     </div>
