- Modificado el landing - Se agrego vista de search results

--- a/music-collection/src/main/resources/templates/landingPage.html
+++ b/music-collection/src/main/resources/templates/landingPage.html
@@ -32,14 +32,17 @@
               </div>
               <div class="collapse navbar-collapse">
                   <ul class="nav navbar-nav">
+                      <li class="active"><a href="/artist">Artists</a></li>
+                      <li><a href="/style">Styles</a></li>
+                      <li><a href="/people">People</a></li>
                   </ul>
               </div>
           </div>
     </div>
       
       <div class="container" style="padding: 70px;">
-          <h3>Bienvenido/a</h3>
-          <p>Bla bla bla</p>
+          <h3>Bienvenido/a al sistema</h3>
+          <p>Para gestionar las entidades de la base de datos: Artists, Styles y People. Presione los links que se encuentran en el navbar.</p>
       </div>
       
   </body>
