--- a/music-collection/src/main/resources/templates/landingPage.html
+++ b/music-collection/src/main/resources/templates/landingPage.html
@@ -41,8 +41,11 @@
     </div>
       
       <div class="container" style="padding: 70px;">
-          <h3>Bienvenido/a al sistema</h3>
-          <p>Para gestionar las entidades de la base de datos: Artists, Styles y People. Presione los links que se encuentran en el navbar.</p>
+          
+          <div class="jumbotron">
+              <h1>Bienvenido/a al sistema</h1>
+              <p>Para gestionar las entidades de la base de datos: <b>Artists</b>, <b>Styles</b> y <b>People</b>. Presione los links que se encuentran en el navbar.</p>
+          </div>
       </div>
       
   </body>
