--- a/music-collection/src/main/resources/templates/addMember.html
+++ b/music-collection/src/main/resources/templates/addMember.html
@@ -47,6 +47,9 @@
     
     <div class="container" style="padding: 70px;">
         
+            <div class="col-md-4">
+                <h1>Add New People</h1>
+            </div>
         
             <form th:action="@{/artist/{id}/member/add/(id=${id})}" method="post">
 
